<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <ScrollView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dateventTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-25dp"
                    android:textColor="@color/pass_match"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="115dp"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_gravity="center"
                            android:id="@+id/homeImage"
                            android:layout_width="75dp"
                            android:layout_height="75dp" />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/homescoreTV"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:text="@string/detail_vs"
                        android:textSize="20sp"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/awayscoreTV"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <FrameLayout
                        android:layout_width="115dp"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_gravity="center"
                            android:id="@+id/awayImage"
                            android:layout_width="75dp"
                            android:layout_height="75dp" />

                    </FrameLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:id="@+id/homenameTV"
                        android:paddingLeft="18dp"
                        android:layout_width="0dp"
                        android:textColor="@color/orange"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:textColor="@color/orange"
                        android:id="@+id/awaynameTV"
                        android:paddingRight="18dp"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:paddingLeft="38dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/detail_composition"
                        android:textSize="14sp" />
                    <TextView
                        android:paddingRight="38dp"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/detail_composition2"
                        android:textSize="14sp" />
                </LinearLayout>
                <View style="@style/Divider" />
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/homegoalsTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_goals"/>
                    <TextView
                        android:id="@+id/awaygoalsTV"
                        android:paddingRight="5dp"
                        android:textAlignment="viewEnd"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/homeshotsTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_shots"/>
                    <TextView
                        android:id="@+id/awayshotsTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:paddingRight="5dp"
                        android:textAlignment="viewEnd"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View style="@style/Divider" />
                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_lineups"
                    android:textAlignment="center"
                    android:textSize="18sp"/>
                <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/homegoalkeeperTV"
                    android:layout_width="115dp"
                    android:textSize="14sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_goal_keeper"/>
                <TextView
                    android:id="@+id/awaygoalkeeperTV"
                    android:layout_width="115dp"
                    android:textSize="14sp"
                    android:paddingRight="5dp"
                    android:textAlignment="viewEnd"
                    android:layout_height="wrap_content" />
            </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/homedefenseTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_defense"/>
                    <TextView
                        android:id="@+id/awaydefenseTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:paddingRight="5dp"
                        android:textAlignment="viewEnd"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/homemidfieldTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_midfield"/>
                    <TextView
                        android:id="@+id/awaymidfieldTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:paddingRight="5dp"
                        android:textAlignment="viewEnd"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/homeforwardTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_forward"/>
                    <TextView
                        android:id="@+id/awayforwardTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:textAlignment="textEnd"
                        android:paddingRight="5dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/homesubtitutesTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_subtitutes"/>
                    <TextView
                        android:id="@+id/awaysubtitutesTV"
                        android:layout_width="115dp"
                        android:textSize="14sp"
                        android:paddingRight="5dp"
                        android:textAlignment="textEnd"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</LinearLayout>